--- a/LiberaryBook/Views/Home/Index.cshtml
+++ b/LiberaryBook/Views/Home/Index.cshtml
@@ -26,8 +26,8 @@
             }
     </style>
 </head>
-
-<div class="login-container">
+<body>
+    <div class="login-container">
     <h2 class="mb-5">Please enter Log-in Info .</h2>
 
     <label for="id">ID</label>
@@ -43,6 +43,8 @@
     <button type="button" onclick="submitForm()">Log In</button>
 
 </div>
+</body>
+
 
 @section scripts {
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
